--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">SDOptimize</string>
-    <string name="sftp_host">pizzacutter.no-ip.org</string>
-    <string name="sftp_username">dataupload</string>
-    <string name="sftp_password">j&amp;ka1h39s7R</string>
-    <string name="sftp_port">57127</string>
-    <string name="sftp_working_directory">/upload</string>
+    <string name="sftp_host">192.168.1.89</string>
+    <string name="sftp_username">abu</string>
+    <string name="sftp_password">abu</string>
+    <string name="sftp_port">22</string>
+    <string name="sftp_working_directory">/home/abu/www/</string>
 </resources>
